03-whoami-tls/whoami-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-tls
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: hello.${ROOT_DOMAIN}
      http:
        paths:
          - path: /whoami
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
